--- a/index.html
+++ b/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name</title>
+    <title>Justin ten Have</title>
 </head>
 <body>
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
-            <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
+            <h2>Justin ten Have - Verbraak</h2>
+            <p>Eindhoven (Omgeving), Nederland.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/justintenhave/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/justin376802"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
-            <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
-            <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
-
-            <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
-            <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
-            <a href="#">Project 4</a>
-            <a href="#">Project 5</a>
+            <h2>Over mij</h2>
+            <p>IT'er met een passie voor Cloud Computing. In mijn rol als technisch specialist (Cloud) kan ik de juiste ondersteuning kan bieden bij de uitdagingen rondom de ‘Journey naar de Cloud’ en bestaande on-premise oplossingen.</p>
+            <h2>Huidige functie</h2>
+            <p>Ik werk momenteel als Technical Specialist bij Valid (Eindhoven) waarbij ik mij bezig hou met Azure Cloud migratie projecten.</p>
+            <p>Deze functie bestaat uit het begeleiden van migraties van on-premises / private-cloud infrastructuren naar de Azure Cloud of inrichting van hybrid-cloud. Het beheren en door ontwikkelen van bestaande omgevingen, optimalisatie, kostenreductie, beveiliging en verhogen efficiëntie van omgevingen.</p>
+            <h2>Vaardigheden</h2>
+            <a>Projectmanagement</a>
+            <a>Intune & Microsoft 365</a>
+            <a>Microsoft Azure</a>
+            <a>PowerShell & Python t.b.v. automation</a>
+            <a>Ervaring met ISO27001 & NEN7510</a>
+            <a>Hybrid Cloud omgevingen (on-prem/private-cloud & public-cloud)</a>
+            <a>MySQL-based databases</a>
+            <a>ETL & Datawarehousing</a>
+            <a>Webservers, webhosting, networking</a>
             <h2>Contact</h2>
-            <p>myEmail@email.com</p>
+            <p>justin@tenhave.net</p>
         </div>
     </div>
 </body>
