Add profile picture.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
+            <img src="https://media.licdn.com/dms/image/C5603AQH81qcn6PM0cQ/profile-displayphoto-shrink_800_800/0/1627030893545?e=1723680000&v=beta&t=8giZQKdtjW1A6hQSwoO4ZbYbU_FJrB_G03cf3y7DiLs" alt="Portretfoto">
             <h2>Justin ten Have - Verbraak</h2>
             <p>Eindhoven (Omgeving), Nederland.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -25,17 +26,18 @@
             <p>Ik werk momenteel als Technical Specialist bij Valid (Eindhoven) waarbij ik mij bezig hou met Azure Cloud migratie projecten.</p>
             <p>Deze functie bestaat uit het begeleiden van migraties van on-premises / private-cloud infrastructuren naar de Azure Cloud of inrichting van hybrid-cloud. Het beheren en door ontwikkelen van bestaande omgevingen, optimalisatie, kostenreductie, beveiliging en verhogen efficiëntie van omgevingen.</p>
             <h2>Vaardigheden</h2>
-            <a>Projectmanagement</a>
-            <a>Intune & Microsoft 365</a>
-            <a>Microsoft Azure</a>
-            <a>PowerShell & Python t.b.v. automation</a>
-            <a>Ervaring met ISO27001 & NEN7510</a>
-            <a>Hybrid Cloud omgevingen (on-prem/private-cloud & public-cloud)</a>
-            <a>MySQL-based databases</a>
-            <a>ETL & Datawarehousing</a>
-            <a>Webservers, webhosting, networking</a>
+            <a>- Projectmanagement</a>
+            <a>- Intune & Microsoft 365</a>
+            <a>- Microsoft Azure</a>
+            <a>- PowerShell & Python t.b.v. automation</a>
+            <a>- Ervaring met ISO27001 & NEN7510</a>
+            <a>- Hybrid Cloud omgevingen (on-prem/private-cloud & public-cloud)</a>
+            <a>- MySQL-based databases</a>
+            <a>- ETL & Datawarehousing</a>
+            <a>- Webservers, webhosting, networking</a>
             <h2>Contact</h2>
             <p>justin@tenhave.net</p>
+            <p>+31(0)6 254 454 99</p>
         </div>
     </div>
 </body>
