--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Justin ten Have</title>
+    <link rel="icon" type="image/x-icon" href="https://justintenhave.blob.core.windows.net/public/favicon.ico">
 </head>
 <body>
     <div class="grid-2">
         <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
-            <img src="https://media.licdn.com/dms/image/C5603AQH81qcn6PM0cQ/profile-displayphoto-shrink_800_800/0/1627030893545?e=1723680000&v=beta&t=8giZQKdtjW1A6hQSwoO4ZbYbU_FJrB_G03cf3y7DiLs" alt="Portretfoto">
+            <!--<i class="fas fa-code fa-5x white"></i>--> 
+            <img src="https://justintenhave.blob.core.windows.net/public/portretfoto_400x400px.jpg" alt="Portretfoto">
             <h2>Justin ten Have - Verbraak</h2>
             <p>Eindhoven (Omgeving), Nederland.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
