--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="portretfoto_400x400px.jpg" alt="Portretfoto">
             <h2>Justin ten Have - Verbraak</h2>
             <p>Eindhoven (Omgeving), Nederland.</p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <!--<a href="#"><i class="fab fa-twitter"></i></a>-->
             <a href="https://www.linkedin.com/in/justintenhave/"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/justin376802"><i class="fab fa-github"></i></a>
         </div>
@@ -39,6 +39,8 @@
             <h2>Contact</h2>
             <p>justin@tenhave.net</p>
             <p>+31(0)6 254 454 99</p>
+            <h2>Links</h2>
+            <a href="https://resourcenamegenerator.azurewebsites.net/generate">Azure Naming Tool</a>
         </div>
     </div>
 </body>
